# SmartSched

./: AISchedulers.cpp  AISchedulers.h  CMakeLists.txt  Metrics.cpp  Metrics.h  Process.h  ProcessManager.cpp  ProcessManager.h  README.md  README2.md  RealTaskManager.cpp  RealTaskManager.h  Scheduler.h  TraditionalSchedulers.cpp  TraditionalSchedulers.h  Utils.cpp  Utils.h  Visualization.cpp  Visualization.h  functionuses.txt  main.cpp  real_data.txt
cmake/: FindSDL2.cmake
cpu_stress/: CpuStress.cpp  CpuStress.h
custom_tasks/: Tasks.cpp  Tasks.h  abc.cpp
image_tasks/: ImageTasks.cpp  ImageTasks.h
